samples/_failures_safe/1761250752_b92503_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_565786e5.c: In function ‘main’:
./samples/SAFE/__tmp_565786e5.c:164:18: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  164 |     free_buffer(&input
      |                  ^~~~~
      |                  int
./samples/SAFE/__tmp_565786e5.c:164:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_565786e5.c:164:23: error: expected ‘)’ at end of input
  164 |     free_buffer(&input
      |                ~      ^
      |                       )
./samples/SAFE/__tmp_565786e5.c:164:5: error: expected declaration or statement at end of input
  164 |     free_buffer(&input
      |     ^~~~~~~~~~~
